--- a/vitis/content.html
+++ b/vitis/content.html
@@ -21,9 +21,20 @@
   display: table;
   clear: both;
 }
+
+blockquote {
+  display: block;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: 40px;
+  margin-right: 40px;
+  background-color:#fcd303
+}
 </style>
 
-
+  <blockquote>
+    All information presented on this site is in draft format and will be updated.
+  </blockquote> 
 <div class="row">
   <div class="column">
   <b style="font-size:30px">Distribution Models</b>
