updated vitis landing page

--- a/vitis/content.html
+++ b/vitis/content.html
@@ -52,13 +52,13 @@ blockquote {
   </div>
   <div class="column">
     <b style="font-size:30px">County Level Maps</b>
-  <h3> Current version 2023-10-04</h3>
+  <h3> Current version 2023-10-18</h3>
   <ul>
-    <li>Included a layer showing the three county only data source (USDA Plants, Bonap, and Nature Serve).</li>
-    <li>Included layers with no spatial data but direct county reference</li>
-    <li>included species with no county records from (USDA plants, Bonap, or nature serve)</li>
-    <li>improved classification rules for evaluations maps based on BONAP and Nature serve data </li>
-    <li>included species with no county records from (USDA plants, Bonap, or nature serve)</li>
+    <li>Alter the visual order </li>
+    <li>Improved labeling of map elements</li>
+    <li>improved integration on Nature Serve and unique grouping of existing county descriptors</li>
+    <li>Alter the ordered of tables</li>
+    <li>Reduce content on the table to make less wide</li>
   </ul>  
   <br>
   <a href="https://geospatialcentroid.github.io/vitis/Vitis acerifolia_Evaluation.html" target="_blank">    Vitis acerifolia</a>
