update text elements of the website

--- a/vitis/content.html
+++ b/vitis/content.html
@@ -52,14 +52,19 @@ blockquote {
   </div>
   <div class="column">
     <b style="font-size:30px">County Level Maps</b>
-  <h3> Current version 2023-10-18</h3>
+  <h3> Current version 2023-10-31</h3>
   <ul>
-    <li>Alter the visual order </li>
-    <li>Improved labeling of map elements</li>
-    <li>improved integration on Nature Serve and unique grouping of existing county descriptors</li>
-    <li>Alter the ordered of tables</li>
-    <li>Reduce content on the table to make less wide</li>
+    <li>Added a data filter to limit states to those listed in Flora of North America</li>
+    <li>Improved the capture of duplicated records between different data source(GBIF/midwest herbarium)</li>
   </ul>  
+  <h3>Expected next steps</h3>
+  <ul>
+    <li>Filter out the county data (plants/bonap) to the states reference by FNA </li>
+    <li>Declare if species data was present in FNA</li>
+    <li>Highlight herbarium records that should be evaluated (similar to county differentiation)</li>
+    <li>Have the opportunity to see occurrence data that is present in states outside of FNA</li>
+    <li>Add the reference google doc for suggestions and alteration of counties/occurrence</li>
+  </ul>
   <br>
   <a href="https://geospatialcentroid.github.io/vitis/Vitis acerifolia_Evaluation.html" target="_blank">    Vitis acerifolia</a>
     <br>
