new county maps and styling on vition vitis landing page

--- a/vitis/content.html
+++ b/vitis/content.html
@@ -6,6 +6,32 @@
 * {
   box-sizing: border-box;
 }
+/* specific styling of header objects*/
+h3, h4, h5, h6 {
+  color: #494949;
+}
+h1, h2, h3 {
+  line-height: 1.1;
+}
+h1, h2, h3, h4, h5, h6 {
+  color: #222;
+  margin: 0 0 20px;
+}
+
+/*setting general look of the website*/
+body {
+  background-color: #fff;
+  padding: 50px;
+  font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: normal;
+  color: #727272;
+  font-weight: 400;
+}
+/*hover color on link elements*/
+a:hover, a:focus {
+  color: #069;
+  font-weight: bold;
+}
 
 /* Create two equal columns that floats next to each other */
 .column {
@@ -52,6 +78,26 @@ blockquote {
   </div>
   <div class="column">
     <b style="font-size:30px">County Level Maps</b>
+  <h3>Observation richness version 2023-11-03 </h3>
+    <p> This version is based around an map that showcase the number of independent observations within a given county. It has only been created for the following subset of species. ("Vitis aestivalis", "Vitis palmata", "Vitis riparia","Vitis rotundifolia", "Vitis rupestris","Vitis shuttleworthii","Vitis vinifera","Vitis vulpina") </p>
+    <ul>
+      <a href="https://geospatialcentroid.github.io/vitis/Vitis aestivalis_Evaluation2.html"  target="_blank">    Vitis aestivalis</a>  
+    <br>
+      <a href="https://geospatialcentroid.github.io/vitis/Vitis palmata_Evaluation2.html"  target="_blank">    Vitis palmata</a>  
+    <br>
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis rotundifolia_Evaluation2.html"  target="_blank">    Vitis rotundifolia</a>  
+    <br>
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis rupestris_Evaluation2.html"  target="_blank">    Vitis rupestris</a>  
+    <br>
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis shuttleworthii_Evaluation2.html"  target="_blank">    Vitis shuttleworthii</a>  
+    <br>
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis vinifera_Evaluation2.html"  target="_blank">    Vitis vinifera</a>  
+    <br>
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis vulpina_Evaluation2.html"  target="_blank">    Vitis vulpina</a>  
+    <br>
+    </ul>
+    
+    
   <h3> Current version 2023-10-31</h3>
   <ul>
     <li>Added a data filter to limit states to those listed in Flora of North America</li>
@@ -66,6 +112,7 @@ blockquote {
     <li>Add the reference google doc for suggestions and alteration of counties/occurrence</li>
   </ul>
   <br>
+  <ul  data-columns="2">
   <a href="https://geospatialcentroid.github.io/vitis/Vitis acerifolia_Evaluation.html" target="_blank">    Vitis acerifolia</a>
     <br>
 <a href="https://geospatialcentroid.github.io/vitis/Vitis aestivalis_Evaluation.html" target="_blank">    Vitis aestivalis</a>  
@@ -88,7 +135,8 @@ blockquote {
     <br>               
 <a href="https://geospatialcentroid.github.io/vitis/Vitis cinerea_Evaluation.html"      target="_blank">  Vitis cinerea</a>  
     <br>                
-<a href="https://geospatialcentroid.github.io/vitis/Vitis girdiana_Evaluation.html"     target="_blank">  Vitis girdiana</a>               
+<a href="https://geospatialcentroid.github.io/vitis/Vitis girdiana_Evaluation.html"     target="_blank">  Vitis girdiana</a>      
+
 <a href="https://geospatialcentroid.github.io/vitis/Vitis labrusca_Evaluation.html"     target="_blank">  Vitis labrusca</a>  
     <br>               
 <a href="https://geospatialcentroid.github.io/vitis/Vitis lincecumii_Evaluation.html"   target="_blank">  Vitis lincecumii</a>  
@@ -136,5 +184,6 @@ blockquote {
 <a href="https://geospatialcentroid.github.io/vitis/Vitis x doaniana_Evaluation.html"      target="_blank">  Vitis x doaniana </a>  
     <br>                      
 <a href="https://geospatialcentroid.github.io/vitis/Vitis x novae-angliae_Evaluation.html" target="_blank">  Vitis x novae-angliae </a>   
+  </ul>
   </div>
 </div> 
