update file reference for vitis summayr doc

--- a/vitis/content.html
+++ b/vitis/content.html
@@ -67,7 +67,7 @@ blockquote {
   <h3> Combined Summary </h3>
   <p> Includes a figure and species richness map for all species currently modeled. </p>
   <br>
-  <a href="https://geospatialcentroid.github.io/vitis/test1_Summary.html" target="_blank"> Run Summary </a> 
+  <a href="https://geospatialcentroid.github.io/vitis/run20231227_Summary.html" target="_blank"> Run Summary </a> 
   <h3>Individual Run Summaries</h3>
   <a href="https://geospatialcentroid.github.io/vitis/Vitis palmata_Summary.html" target="_blank"> Vitis palmata </a>    
   <br>
