added an update reference date

--- a/vitis/content.html
+++ b/vitis/content.html
@@ -63,6 +63,7 @@ blockquote {
   </blockquote> 
 <div class="row">
   <div class="column">
+  <h3>Summary pages we last updated on  2024-01-02 </h3>
   <b style="font-size:30px">Distribution Models</b>
   <h3> Combined Summary </h3>
   <p> Includes a figure and species richness map for all species currently modeled. </p>
