new vitis specific summaries

--- a/vitis/content.html
+++ b/vitis/content.html
@@ -70,11 +70,19 @@ blockquote {
   <br>
   <a href="https://geospatialcentroid.github.io/vitis/run20231227_Summary.html" target="_blank"> Run Summary </a> 
   <h3>Individual Run Summaries</h3>
-  <a href="https://geospatialcentroid.github.io/vitis/Vitis palmata_Summary.html" target="_blank"> Vitis palmata </a>    
+    <a href="https://geospatialcentroid.github.io/vitis/Vitis aestivalis_Summary.html" target="_blank"> Vitis aestivalis </a>   
   <br>
-  <a href="https://geospatialcentroid.github.io/vitis/Vitis rupestris_Summary.html" target="_blank"> Vitis rupestris </a>
+  <a href="https://geospatialcentroid.github.io/vitis/Vitis arizonica_Summary.html" target="_blank"> Vitis arizonica </a>    
   <br>
-  <a href="https://geospatialcentroid.github.io/vitis/Vitis shuttleworthii_Summary.html" target="_blank"> Vitis shuttleworthii </a>  
+  <a href="https://geospatialcentroid.github.io/vitis/Vitis californica_Summary.html" target="_blank"> Vitis californica </a>
+  <br>
+    <a href="https://geospatialcentroid.github.io/vitis/Vitis palmata_Summary.html" target="_blank"> Vitis palmata </a>
+  <br>
+  <a href="https://geospatialcentroid.github.io/vitis/Vitis shuttleworthii_Summary.html" target="_blank"> Vitis shuttleworthii
+  <br>
+      <a href="https://geospatialcentroid.github.io/vitis/Vitis vulpina_Summary.html" target="_blank"> Vitis vulpina </a>
+  <br>
+  </a>  
   <br>
   </div>
   <div class="column">
@@ -84,15 +92,15 @@ blockquote {
     <ul>
       <a href="https://geospatialcentroid.github.io/vitis/Vitis aestivalis_Evaluation2.html"  target="_blank">    Vitis aestivalis</a>  
     <br>
-      <a href="https://geospatialcentroid.github.io/vitis/Vitis palmata_Evaluation2.html"  target="_blank">    Vitis palmata</a>  
+      <a href="https://geospatialcentroid.github.io/vitis/Vitis arizonica_Evaluation2.html"  target="_blank"> Vitis arizonica</a>  
     <br>
-          <a href="https://geospatialcentroid.github.io/vitis/Vitis rotundifolia_Evaluation2.html"  target="_blank">    Vitis rotundifolia</a>  
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis californica_Evaluation2.html"  target="_blank">Vitis californica</a>  
     <br>
-          <a href="https://geospatialcentroid.github.io/vitis/Vitis rupestris_Evaluation2.html"  target="_blank">    Vitis rupestris</a>  
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis palmata_Evaluation2.html"  target="_blank">Vitis palmata</a>  
     <br>
-          <a href="https://geospatialcentroid.github.io/vitis/Vitis shuttleworthii_Evaluation2.html"  target="_blank">    Vitis shuttleworthii</a>  
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis rupestri_Evaluation2.html"  target="_blank">Vitis rupestri</a>  
     <br>
-          <a href="https://geospatialcentroid.github.io/vitis/Vitis vinifera_Evaluation2.html"  target="_blank">    Vitis vinifera</a>  
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis shuttleworthii_Evaluation2.html"  target="_blank">Vitis shuttleworthii</a>  
     <br>
           <a href="https://geospatialcentroid.github.io/vitis/Vitis vulpina_Evaluation2.html"  target="_blank">    Vitis vulpina</a>  
     <br>
