new reference text and dates for vitis work

--- a/vitis/content.html
+++ b/vitis/content.html
@@ -63,7 +63,7 @@ blockquote {
   </blockquote> 
 <div class="row">
   <div class="column">
-  <h3>Summary pages we last updated on  2024-01-02 </h3>
+  <h3>Summary pages we last updated on  2024-01-31 </h3>
   <b style="font-size:30px">Distribution Models</b>
   <h3> Combined Summary </h3>
   <p> Includes a figure and species richness map for all species currently modeled. </p>
@@ -87,8 +87,8 @@ blockquote {
   </div>
   <div class="column">
     <b style="font-size:30px">County Level Maps</b>
-  <h3>Observation richness version 2023-12-13 </h3>
-    <p> This version is based around an map that showcase the number of independent observations within a given county. This includes an update synonym list as well as the replacement of midwest herbarium data with SEINET data as this source was more comprehensive of the herbarium network (midwest, sernec, etc) </p>
+  <h3>Observation richness version 2023-01-31 </h3>
+    <p> Major update to the layout and organization of the document. About 85% of the final product present. Hope to get it finalized by 2/6. </p>
     <ul>
       <a href="https://geospatialcentroid.github.io/vitis/Vitis aestivalis_Evaluation2.html"  target="_blank">    Vitis aestivalis</a>  
     <br>
