fixed links and additional species

--- a/vitis/content.html
+++ b/vitis/content.html
@@ -90,15 +90,21 @@ blockquote {
   <h3>Observation richness version 2023-01-31 </h3>
     <p> Major update to the layout and organization of the document. About 85% of the final product present. Hope to get it finalized by 2/6. </p>
     <ul>
+      <a href="https://geospatialcentroid.github.io/vitis/Vitis acerifolia_Evaluation2.html"  target="_blank">  Vitis acerifolia</a>  
+    <br>
       <a href="https://geospatialcentroid.github.io/vitis/Vitis aestivalis_Evaluation2.html"  target="_blank">    Vitis aestivalis</a>  
     <br>
-      <a href="https://geospatialcentroid.github.io/vitis/Vitis arizonica_Evaluation2.html"  target="_blank"> Vitis arizonica</a>  
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis riparia_Evaluation2.html"  target="_blank">    Vitis riparia</a>  
     <br>
-          <a href="https://geospatialcentroid.github.io/vitis/Vitis californica_Evaluation2.html"  target="_blank">Vitis californica</a>  
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis arizonica_Evaluation2.html"  target="_blank">    Vitis arizonica</a>  
+    <br>
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis californica_Evaluation2.html"  target="_blank">    Vitis californica</a>  
+    <br>
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis rotundifolia_Evaluation2.html"  target="_blank">    Vitis rotundifolia</a>  
     <br>
           <a href="https://geospatialcentroid.github.io/vitis/Vitis palmata_Evaluation2.html"  target="_blank">Vitis palmata</a>  
     <br>
-          <a href="https://geospatialcentroid.github.io/vitis/Vitis rupestri_Evaluation2.html"  target="_blank">Vitis rupestri</a>  
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis rupestris_Evaluation2.html"  target="_blank">Vitis rupestris</a>  
     <br>
           <a href="https://geospatialcentroid.github.io/vitis/Vitis shuttleworthii_Evaluation2.html"  target="_blank">Vitis shuttleworthii</a>  
     <br>
