updated the structure for older runs

--- a/vitis/content.html
+++ b/vitis/content.html
@@ -96,10 +96,6 @@ blockquote {
     <br>
           <a href="https://geospatialcentroid.github.io/vitis/Vitis riparia_Evaluation2.html"  target="_blank">    Vitis riparia</a>  
     <br>
-          <a href="https://geospatialcentroid.github.io/vitis/Vitis arizonica_Evaluation2.html"  target="_blank">    Vitis arizonica</a>  
-    <br>
-          <a href="https://geospatialcentroid.github.io/vitis/Vitis californica_Evaluation2.html"  target="_blank">    Vitis californica</a>  
-    <br>
           <a href="https://geospatialcentroid.github.io/vitis/Vitis rotundifolia_Evaluation2.html"  target="_blank">    Vitis rotundifolia</a>  
     <br>
           <a href="https://geospatialcentroid.github.io/vitis/Vitis palmata_Evaluation2.html"  target="_blank">Vitis palmata</a>  
@@ -111,6 +107,12 @@ blockquote {
           <a href="https://geospatialcentroid.github.io/vitis/Vitis vulpina_Evaluation2.html"  target="_blank">    Vitis vulpina</a>  
     <br>
     </ul>
+    Older versions for reference of changes  
+    <br>
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis arizonica_Evaluation2.html"  target="_blank">    Vitis arizonica</a>  
+    <br>
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis californica_Evaluation2.html"  target="_blank">    Vitis californica</a>  
+    <br>
     
   </div>
 </div> 
