new vitis county maps

--- a/vitis/content.html
+++ b/vitis/content.html
@@ -87,32 +87,54 @@ blockquote {
   </div>
   <div class="column">
     <b style="font-size:30px">County Level Maps</b>
-  <h3>Observation richness version 2023-01-31 </h3>
-    <p> Major update to the layout and organization of the document. About 85% of the final product present. Hope to get it finalized by 2/6. </p>
+  <h3>Observation richness version 2023-02-05 </h3>
+    <p> Very near completion. Some issues with bonap/plants layer not accounting for county data with no lat lon. Also specific species are not listed here. </p>
     <ul>
       <a href="https://geospatialcentroid.github.io/vitis/Vitis acerifolia_Evaluation2.html"  target="_blank">  Vitis acerifolia</a>  
     <br>
-      <a href="https://geospatialcentroid.github.io/vitis/Vitis aestivalis_Evaluation2.html"  target="_blank">    Vitis aestivalis</a>  
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis aestivalis_Evaluation2.html"  target="_blank">  Vitis aestivalis</a>  
     <br>
-          <a href="https://geospatialcentroid.github.io/vitis/Vitis riparia_Evaluation2.html"  target="_blank">    Vitis riparia</a>  
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis arizonica_Evaluation2.html"  target="_blank">  Vitis arizonica</a>  
     <br>
-          <a href="https://geospatialcentroid.github.io/vitis/Vitis rotundifolia_Evaluation2.html"  target="_blank">    Vitis rotundifolia</a>  
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis baileyana_Evaluation2.html"  target="_blank">  Vitis baileyana</a>  
     <br>
-          <a href="https://geospatialcentroid.github.io/vitis/Vitis palmata_Evaluation2.html"  target="_blank">Vitis palmata</a>  
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis berlandieri_Evaluation2.html"  target="_blank">  Vitis berlandieri</a>  
     <br>
-          <a href="https://geospatialcentroid.github.io/vitis/Vitis rupestris_Evaluation2.html"  target="_blank">Vitis rupestris</a>  
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis californica_Evaluation2.html"  target="_blank">  Vitis californica</a>  
     <br>
-          <a href="https://geospatialcentroid.github.io/vitis/Vitis shuttleworthii_Evaluation2.html"  target="_blank">Vitis shuttleworthii</a>  
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis cinerea_Evaluation2.html"  target="_blank">  Vitis cinerea</a>  
     <br>
-          <a href="https://geospatialcentroid.github.io/vitis/Vitis vulpina_Evaluation2.html"  target="_blank">    Vitis vulpina</a>  
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis girdiana_Evaluation2.html"  target="_blank">  Vitis girdiana</a>  
     <br>
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis labrusca_Evaluation2.html"  target="_blank">  Vitis labrusca</a>  
+    <br>
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis monticola_Evaluation2.html"  target="_blank">  Vitis monticola</a>  
+    <br>
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis mustangensis_Evaluation2.html"  target="_blank">  Vitis mustangensis</a>  
+    <br>
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis palmata_Evaluation2.html"  target="_blank">  Vitis palmata</a>  
+    <br>
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis riparia_Evaluation2.html"  target="_blank">  Vitis riparia</a>  
+    <br>
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis rotundifolia_Evaluation2.html"  target="_blank">  Vitis rotundifolia</a>  
+    <br>
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis rotundifolia var. munsoniana_Evaluation2.html"  target="_blank">  Vitis rotundifolia var. munsoniana</a>  
+    <br>
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis rotundifolia var. pygmaea_Evaluation2.html"  target="_blank">  Vitis rotundifolia var. pygmaea</a>  
+    <br>
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis rotundifolia var. rotundifolia_Evaluation2.html"  target="_blank">  Vitis rotundifolia var. rotundifolia</a>  
+    <br>
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis rupestris_Evaluation2.html"  target="_blank">  Vitis rupestris</a>  
+    <br>
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis shuttleworthii_Evaluation2.html"  target="_blank">  Vitis shuttleworthii</a>  
+    <br>
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis vulpina_Evaluation2.html"  target="_blank">  Vitis vulpina</a>  
+    <br>
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis Vitis x doaniana_Evaluation2.html"  target="_blank">  Vitis Vitis x doaniana</a>  
+    <br>
+          <a href="https://geospatialcentroid.github.io/vitis/Vitis Vitis x novae-angliae_Evaluation2.html"  target="_blank">  Vitis Vitis x novae-angliae</a>  
+    <br>
+  
     </ul>
-    Older versions for reference of changes  
-    <br>
-          <a href="https://geospatialcentroid.github.io/vitis/Vitis arizonica_Evaluation2.html"  target="_blank">    Vitis arizonica</a>  
-    <br>
-          <a href="https://geospatialcentroid.github.io/vitis/Vitis californica_Evaluation2.html"  target="_blank">    Vitis californica</a>  
-    <br>
-    
   </div>
 </div> 
