improved some text elements

--- a/vitis/content.html
+++ b/vitis/content.html
@@ -90,7 +90,7 @@ blockquote {
   <h3>Produced on 2023-03-11 </h3>
   <h3>Data sets will not include any records after  2024-01-20</h3>
     <p> 
-    The evaluations maps can be used to access the quality of g
+    The evaluations maps can be used to access the quality of county and location based occurrence data for a given species. 
     </p>
     
     
